# llmbda

./: README.md  eval.py  justfile  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
classes/: LogicNode.py  LogicTree.py
dataset/: augment.py  augmented_train.csv  augmented_train_alpaca.csv  autolabelled.csv  check.py  get_pre_reqs.py  labelled.csv  replace_quotes.py  requisites.csv  split.py  test.csv  train.csv  train.jsonl  validation.csv
eval/: gemini-few-shot.txt  gemini-few-shots.txt  gemini-zero-shot.txt  gpt-3.5-finetune.txt  gpt-3.5-turbo-few-shots.txt  gpt-3.5-zero-shot.txt  gpt-4-few-shots.txt  gpt-4-zero-shots.txt  llama2-chat-few-shots.txt  llama2-finetuned.txt
experiments/: gemini.py  gpt.py  llama_README.md
experiments/gemini/: gemini.py
experiments/gpt/: gpt.py
experiments/llama2/: .gitignore  finetune.sh  llama2_chat.py  llama2_finetuned.py  sft_finetune.py
proposal/: proposal.Rmd
results/: gemini-few-shot.csv  gemini-few-shots.csv  gemini-one-shot.csv  gemini-zero-shot.csv  gpt-3.5-turbo-1106-few-shot.csv  gpt-4-1106-preview-few-shot.csv  gpt-4-1106-preview-one-shot.csv  gpt-4-1106-preview-zero-shot.csv  gpt3.5-finetuned.csv  gpt3.5-one-shot.csv  gpt3.5-zero-shot.csv  llama2-chat-few-shots.csv  llama2-chat-one-shots.csv  llama2_finetuned_pred.csv
scripts/: augment.py  check.py  check_finetune_data.py  eval.py  format_alpaca.py  get_pre_reqs.py  replace_quotes.py  split.py
