[tool.poetry]
name = "llmbda"
version = "0.1.0"
description = ""
authors = ["SamZhang02 <sam.zijing.zhang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
openai = "^1.3.7"
scikit-learn = "^1.3.2"
tiktoken = "^0.5.2"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.1"
transformers = "^4.36.1"
trl = "^0.7.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
ruff = "^0.1.7"
zss = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
